# vivid-plexus

./: CMakeLists.txt  README.md  vivid-package.json
.github/workflows/: smoke.yml
graphs/: plexus_demo.json
src/: plexus.cpp  plexus_synth.cpp
tests/: test_package_manifest.cpp
